<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.keng.main.NewOrderFragment">

    <!-- TODO: Update blank fragment layout -->

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/BG_Color">

        <ImageView
            android:id="@+id/status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/status_bar_3" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/new_Order_set3"
            android:textAlignment="center"
            android:textColor="@color/colorIntroText"
            android:textSize="24sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/status" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_confim"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintVertical_bias="0.056">

            <TextView
                android:id="@+id/txtTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/Order"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="2017年4月28日16時58分"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:paddingTop="10dp"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="8dp">

                <TextView
                    android:id="@+id/txtStart"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:text="@string/new_Order_set1_start"
                    android:textAlignment="textStart"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/Start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="商學院"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:paddingTop="10dp"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="8dp">

                <TextView
                    android:id="@+id/txtDest"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:text="@string/new_Order_set1_destination"
                    android:textAlignment="textStart"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/Destination"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="電機資訊學院"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/txtReceiver"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:text="@string/new_Order_set2_receiver"
                    android:textAlignment="textStart"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="密卡登"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/txtPhone"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:text="@string/new_Order_set2_phone"
                    android:textAlignment="textStart"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/Phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0921-879-453"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/txtnote"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:text="@string/new_Order_set2_note"
                    android:textAlignment="textStart"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txtNote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="專題要加油唷"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/dot_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:paddingTop="10dp"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="8dp">

                <TextView
                    android:id="@+id/txtTotal"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:text="@string/cost"
                    android:textAlignment="textStart"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/cost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="NT$30"
                    android:textAlignment="viewStart"
                    android:textColor="@color/Cost_Color"
                    android:textSize="24sp" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_confim"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@android:color/black"
            android:text="@string/confirm"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>
